<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/barrio"
        android:padding="10dp"
        android:text="@string/login_here"
        android:textColor="@color/material_dynamic_primary100"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/edit_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:padding="10dp"
        android:src="@drawable/ic_baseline_edit_24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_profiles_recycler"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/big_shoulders_inline_display_extrabold"
        android:text="@string/who_s_posting"
        android:textSize="30sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/login_profiles_recycler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/login_profiles_recycler"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent">

        <androidx.cardview.widget.CardView
            android:id="@+id/add_login_image_card"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:background="#80000000"
            android:padding="10dp"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/add_profile_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_add_100" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/accountType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_login_image_card"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="@string/add_profile" />


    </RelativeLayout>
</RelativeLayout>