<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:background="@drawable/notifications_dialog"
    app:cardCornerRadius="8dp">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:text="Share new post"
        android:textColor="@color/material_dynamic_primary100"
        android:textSize="40sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80000000"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/transaction_id_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/enter_transaction_id_here">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/transaction_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_transaction_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/transaction_id_layout"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:entries="@array/transaction_type_array"
                android:prompt="@string/transactionType" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_post_amount_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/spinner_transaction_type"
                android:layout_marginStart="18dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/enter_amount_you_deposited">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_post_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_post_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/new_post_amount_layout"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:entries="@array/post_type_array"
                android:prompt="@string/postType" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="8dp"
                android:background="@drawable/make_call_bg"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="16dp"
                        android:text="Advanced settings" />

                    <ImageButton
                        android:id="@+id/expand_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginVertical="4dp"
                        android:layout_marginEnd="16dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/baseline_keyboard_arrow_down_32" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/advanced_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginVertical="4dp"
                        android:background="#80FFFFFF" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="This post will be seen by everyone"
                        android:layout_marginStart="16dp"
                        android:id="@+id/vivbility_info"/>

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/spinnerVisibility"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="8dp"
                        android:dropDownVerticalOffset="40dp"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:popupBackground="@drawable/custom_spinner_background"
                        android:prompt="@string/select_visibility_prompt"
                        android:spinnerMode="dropdown"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/proceed_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="8dp"
                android:text="Proceed"
                app:cornerRadius="8dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>